--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
+    <meta name="keywards" content="wwk,吴伟康,吴钟离,前端工程师">
+    <meta name="description" content="挣钱">
+    <title>wwk 博客 前端工程师</title>
   </head>
   <body>
     <div id="app"></div>
